--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,10 @@
     padding: 0;
 }
  
-.frame{
-    /* width: 715px; */
-    margin: auto;
+.frame {
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    width: 50%;
-    /* height: 100%; */
+    grid-template-columns: 1fr 3fr;
     max-width: 595px;
     min-width: 297px;
     max-height: 842px;
@@ -19,23 +16,72 @@
     border: 2px solid black;
 }
 
-.left-section img{
-    width: 200px;
+.left-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #2b313d;
+    color: #ffffff;
+} 
+
+.left-section img {
+    width: 70%;
     clip-path:ellipse(50% 40%);
 }
 
-.line{
-    /* border-top: 3px solid blue; */
-    background-color: blue;
+.left-content {
+
+}
+
+.language-grid {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.circles-in-line {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+}
+
+.right-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.right-content {
+
+}
+
+#black-object {
+    background-color: #000000;
+}
+
+#white-object {
+    background-color: #ffffff;
+}
+
+#transparent-object {
+    background-color: rgba(112, 112, 112, 0.4);
+}
+
+.links {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.line {
     border-radius: 2px;
     width: 80px;
     height: 4px;
 }
-/*
-.left-contact{
 
+.circle{
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
 }
-
-.right-profile{
-
-} */
