--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     /* font-family: 'DotGothic16', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     font-size: 12px;
 }
  
@@ -34,7 +34,8 @@
 } 
 
 .left-section img {
-    width: 50%;
+    /* width: 120px; */
+    height: 120px;
     clip-path:ellipse(50% 40%);
     margin-top: 30px;
     /* margin-bottom: 30px; */
@@ -53,7 +54,7 @@
     margin-top: 30px;
 }
 
-.language-grid {
+.content-grid {
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -63,6 +64,7 @@
     display: flex;
     /* flex-direction: row; */
     justify-content: space-between;
+    gap: 6px;
 }
 
 .right-section {
@@ -73,8 +75,16 @@
     color: #000000;
 }
 
-.right-content {
+.name {
+    /* width: 50%; */
+    height: 120px;
+    margin-top: 30px;
+}
 
+.right-content {
+    /* margin-top: 30px;
+    margin-bottom: 30px; */
+    margin:  30px 30%;
 }
 
 #black-object {
@@ -106,8 +116,4 @@
     border-radius: 50%;
     width: 20px;
     height: 20px;
-}
-
-.line-height {
-    /* line-height: 18px; */
 }
