--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 *{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    /* font-family: 'DotGothic16', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,7 +14,6 @@
     min-width: 297px;
     max-height: 842px;
     min-height: 420px;
-    /* border: 2px solid black; */
     margin-top: 20px;
     box-shadow: 0px 0px 100px 1px gray;
 }
@@ -23,6 +21,15 @@
 .content {
     margin-top: 20px;
     line-height: 18px;
+}
+
+.profile .content {
+    min-width: 200px;
+    max-width: 350px;
+}
+
+.headings {
+    margin-top: 30px;
 }
 
 .left-section {
@@ -34,24 +41,15 @@
 } 
 
 .left-section img {
-    /* width: 120px; */
     height: 120px;
     clip-path:ellipse(50% 40%);
     margin-top: 30px;
-    /* margin-bottom: 30px; */
 }
 
 .left-content {
-    margin-top: 30px;
     margin-bottom: 30px;
-}
-
-.education {
-    margin-top: 30px;
-}
-
-.language {
-    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .content-grid {
@@ -62,9 +60,10 @@
 
 .circles-in-line {
     display: flex;
-    /* flex-direction: row; */
     justify-content: space-between;
-    gap: 6px;
+    gap: 4px;
+
+    margin: 0 30px;
 }
 
 .right-section {
@@ -76,15 +75,19 @@
 }
 
 .name {
-    /* width: 50%; */
     height: 120px;
-    margin-top: 30px;
 }
 
 .right-content {
-    /* margin-top: 30px;
-    margin-bottom: 30px; */
-    margin:  30px 30%;
+    margin:  30px 30px;
+}
+
+.experience {
+    margin-top: 30px;
+}
+
+.experience .experience-in-company {
+    margin-left: 30px;
 }
 
 #black-object {
@@ -106,14 +109,34 @@
 
 .line {
     border-radius: 2px;
-    width: 80px;
+    width: 50px;
     height: 4px;
     margin-top: 20px;
-    /* margin: 20px 0px; */
 }
 
 .circle{
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 12px;
+    height: 12px;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+h3 {
+    font-size: 14px;
+}
+
+.profession {
+    font-size: 22px;
+    font-family: 'DotGothic16', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.post-in-company {
+    
 }
