--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body .frame {
   max-height: 842px;
   min-height: 420px;
   margin-top: 20px;
-  box-shadow: 0px 0px 100px 1px gray;
+  box-shadow: 0px 0px 100px 1px #0e2de2;
   padding: 50px;
   display: flex;
   flex-direction: column;
@@ -149,6 +149,7 @@ body .upper-part .contacts .details img {
 .title-stack .title-stack-grid .content {
   flex-direction: column;
   align-items: flex-start;
+  justify-content: normal;
 }
 .title-stack .title-stack-grid .line {
   height: 100%;
