--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,21 @@
-$color-light: #467aff;
-$color-new: #0e2de2;
+$color-background-primary: #ffffff;
+$color-background-secondary: var(--unnamed, radial-gradient(176.92% 100.27% at 47.15% -0.00%, rgba(223, 245, 237, 0.59) 3.65%, rgba(199, 224, 237, 0.55) 100%));
+$color-background-title: radial-gradient(92.07% 109.32% at 100.00% 71.83%, #40E1B1 0%, #26B973 45.83%, #0287CC 100%);
+
+$color-shadow-primary: rgb(170, 217, 237);
+$color-shadow-secondary: rgb(185, 238, 223);
+
+$color-line: #40E1B1;
+$color-line-shadow: #6298f4;
+
+$color-filter-primary: brightness(0) saturate(100%) invert(67%) sepia(70%) saturate(377%) hue-rotate(110deg) brightness(99%) contrast(91%);
+$color-filter-secondary: brightness(0) saturate(100%) invert(53%) sepia(61%) saturate(5570%) hue-rotate(210deg) brightness(101%) contrast(103%);
+
+$color-font-dark: #000000;
+$color-font-about: #2c313f;
+$color-font-light: #9c9e9f;
+$color-font-title-primary: #57e15e;
+$color-font-title-secondary: #467aff;
 
 * {
   margin: 0;
@@ -9,22 +25,22 @@ $color-new: #0e2de2;
   font-family: "Gilroy", sans-serif;
   font-size: 10px;
   font-style: normal;
-  color: #ffffff;
+  color: $color-font-dark;
 }
 
 body {
-  background-color: #000;
+  background-color: $color-background-primary;
 
   .frame {
     overflow: hidden;
     position: relative;
     margin: 0 auto;
-    max-width: 595px;
+    width: 595px;
     min-width: 297px;
-    max-height: 842px;
+    height: 842px;
     min-height: 420px;
     margin-top: 20px;
-    box-shadow: 0px 0px 100px 1px $color-new;
+    box-shadow: 0px 0px 100px 1px $color-shadow-secondary;
     padding: 50px;
     display: flex;
     flex-direction: column;
@@ -33,16 +49,16 @@ body {
 
     .name {
       font-family: "Press Start 2P", cursive;
-      // color: $color-new;
       font-size: 20px;
-      background-color: $color-light;
+      background: $color-background-title;
       padding: 10px;
       border-radius: 10px;
-
+      color: $color-background-primary;
+      
       .job-title {
         font-family: "DotGothic16", sans-serif;
-        color: $color-new;
-        font-size: 15px;
+        color: $color-background-primary;
+        font-size: 20px;
         text-align: center;
       }
     }
@@ -55,10 +71,10 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
-      filter: invert(18%) sepia(96%) saturate(6877%) hue-rotate(238deg)
-        brightness(86%) contrast(108%);
+      filter: $color-filter-primary;
       bottom: -10px;
       left: -10px;
+
       img {
         object-fit: cover;
         object-position: top;
@@ -71,15 +87,16 @@ body {
   .upper-part {
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-items: stretch;
+    padding: 0px 40px;
 
     .profile-img {
       width: 150px;
       height: 150px;
       border-radius: 10px;
-      box-shadow: 0px 0px 20px 5px $color-new;
+      box-shadow: 0px 0px 20px 5px $color-shadow-primary;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -92,15 +109,19 @@ body {
     }
 
     .contacts {
-      box-shadow: 0px 0px 20px 5px $color-light;
-      background-color: #111113;
+      box-shadow: 0px 0px 20px 5px $color-shadow-primary;
+      background: $color-background-secondary;
       display: flex;
       flex-direction: column;
       gap: 5px;
       align-items: flex-start;
       justify-content: center;
-      padding: 26px;
+      padding: 28px;
       border-radius: 10px;
+
+      .links {
+        color: $color-font-title-secondary;
+      }
 
       .details {
         display: flex;
@@ -115,7 +136,8 @@ body {
 
 .about {
   text-align: left;
-  font-size: 10px;
+  font-size: 12px;
+  color: $color-font-about;
 }
 
 .experience {
@@ -124,7 +146,8 @@ body {
   width: 100%;
   .experience-content {
     span {
-      color: #9c9e9f;
+      color: $color-font-light;
+      font-size: 12px;
     }
   }
   .experience-title {
@@ -141,13 +164,12 @@ body {
 
 .title {
   font-family: "Press Start 2P", cursive;
-  // color: $color-light;
-  color: $color-new;
-  font-size: 10px;
+  color: $color-font-title-primary;
+  font-size: 14px;
 }
 
 .line {
-  border: 2px solid $color-light;
+  border: 2px solid $color-line;
   width: 100%;
   border-radius: 2px;
 }
@@ -167,7 +189,6 @@ body {
     .line {
       height: 100%;
       width: 0;
-      // border-radius: 0;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
     }
@@ -184,19 +205,24 @@ body {
 
   .firm {
     font-weight: 600;
-    font-size: 12px;
+    font-size: 14px;
   }
   .post {
     font-style: oblique;
   }
   .stack {
-    margin-top: 5px;
+    margin-top: 15px;
+    span {
+      color: $color-font-light;
+      font-size: 14px;
+    }
+    
   }
   .content-margin {
     padding-left: 20px;
     width: 100%;
     .skills {
-      margin-top: 5px;
+      margin-top: 15px;
       display: flex;
       flex-direction: column;
       gap: 5px;
@@ -204,15 +230,22 @@ body {
         display: grid;
         grid-template-columns: 1fr 2fr;
         justify-items: start;
+        span {
+          color: $color-font-light;
+          font-size: 14px;
+        }
+        
         .skills-shadow {
           width: 80%;
-          box-shadow: inset 0px 0px 5px 1px $color-light;
+          // box-shadow: inset 0px 0px 5px 1px $color-shadow-primary;
+          box-shadow: inset 0px 0px 5px 1px $color-line;
           border-radius: 10px;
           display: flex;
           align-items: center;
           .Line {
             width: 80%;
-            border: 3px solid $color-new;
+            // border: 3px solid $color-line;
+            border: 3px solid $color-line-shadow;
             border-radius: 6px;
             margin-left: 3px;
             &#TypeScript{
@@ -229,8 +262,4 @@ body {
       }
     }
   }
-}
-
-span {
-  color: #9c9e9f;
 }
