--- a/main.css
+++ b/main.css
@@ -38,7 +38,8 @@ body .frame .name {
 }
 body .frame .name .job-title {
   font-family: "DotGothic16", sans-serif;
-  color: #ffffff;
+  color: #467aff;
+  text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #FFF, 0 0 3px #FFF, 0 0 14px #FFF, 0 0 5px #FFF, 0 0 7px #FFF;
   font-size: 20px;
   text-align: center;
 }
@@ -88,7 +89,7 @@ body .upper-part .profile-img img {
 }
 body .upper-part .contacts {
   box-shadow: 0px 0px 20px 5px rgb(170, 217, 237);
-  background: var(--unnamed, radial-gradient(176.92% 100.27% at 47.15% 0%, rgba(223, 245, 237, 0.59) 3.65%, rgba(199, 224, 237, 0.55) 100%));
+  background: rgba(164, 212, 236, 0.35);
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -112,6 +113,7 @@ body .upper-part .contacts .details img {
   text-align: left;
   font-size: 12px;
   color: #2c313f;
+  padding: 15px;
 }
 
 .experience {
@@ -137,6 +139,7 @@ body .upper-part .contacts .details img {
   font-family: "Press Start 2P", cursive;
   color: #57e15e;
   font-size: 14px;
+  text-transform: uppercase;
 }
 
 .line {
