--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,6 @@
 $color-background-primary: #ffffff;
-$color-background-secondary: var(--unnamed, radial-gradient(176.92% 100.27% at 47.15% -0.00%, rgba(223, 245, 237, 0.59) 3.65%, rgba(199, 224, 237, 0.55) 100%));
+// $color-background-secondary: var(--unnamed, radial-gradient(176.92% 100.27% at 47.15% -0.00%, rgba(223, 245, 237, 0.59) 3.65%, rgba(199, 224, 237, 0.55) 100%));
+$color-background-secondary: rgb(164 212 236 / 35%);
 $color-background-title: radial-gradient(92.07% 109.32% at 100.00% 71.83%, #40E1B1 0%, #26B973 45.83%, #0287CC 100%);
 
 $color-shadow-primary: rgb(170, 217, 237);
@@ -57,7 +58,9 @@ body {
       
       .job-title {
         font-family: "DotGothic16", sans-serif;
-        color: $color-background-primary;
+        // color: $color-background-primary;
+        color: $color-font-title-secondary;
+        text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #FFF, 0 0 3px #FFF, 0 0 14px #FFF, 0 0 5px #FFF, 0 0 7px #FFF;
         font-size: 20px;
         text-align: center;
       }
@@ -138,6 +141,7 @@ body {
   text-align: left;
   font-size: 12px;
   color: $color-font-about;
+  padding: 15px;
 }
 
 .experience {
@@ -166,6 +170,7 @@ body {
   font-family: "Press Start 2P", cursive;
   color: $color-font-title-primary;
   font-size: 14px;
+  text-transform: uppercase;
 }
 
 .line {
